[project]
name = "rung"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "numpy==1.26.4",
    "pandas",
    "bnlearn",
    "dowhy>=0.13",
    "causal-learn",
    "econml",
    "fastapi>=0.117.1",
    "ipython>=9.6.0",
    "pydot",
    "pygraphviz",
    "pytest",
    "jupyter",
    "pooch",
    "tabulate"
]


