[project]
name = "rung"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "fastapi>=0.121.1",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "sqlmodel>=0.0.27",
    "python-multipart",

    "pandas>=2.0.0",
    "numpy==1.26.4",

    "bnlearn",
    "dowhy>=0.13",
    "causal-learn",
    "econml",
    "pydot",
    "pygraphviz",

    "pooch",
    "tabulate",

    "ipython>=9.6.0",
    "jupyter",

    "uvicorn"

]
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",  # for testing FastAPI
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rung"]

[tool.uv]
package = true